This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-01-04 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/config-openvms.h: #include <inttypes.h> for int64_t.

	* src/PatternLayout.cpp(doFormat): removed superfluous return
	statement.
	
2002-01-03 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/Filter.hh: decide() is NOT abstract.

	* tests/testFilter.cpp: added
	* tests/Makefile.am: added testFilter.cpp to tests.
	
2001-12-21 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.2.6b
	
	* configure.in: upped release to 0.2.6b
	
	* src/Priority.cpp: getPriorityValue(): fix bug in numerical input 
	handling.

	* tests/Makefile.am: added very simple test for Priority.
	* tests/testPriority.cpp: added.
	
2001-12-13 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/OstringStream.cpp: use portable_vsnprintf(), not
	portable_snprintf().
	
2001-12-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.2.6

	* TODO: Mark PatternLayout and SimpleConfigurator as done.

	* NEWS: release 0.2.6
	
	* Makefile.am: exclude CVS subdir from doc-dist tar ball.
	
	* include/log4cpp/config-win32.h: #define int64_t as __int64, 
	#define LOG4CPP_MISSING_INT64_OSTREAM_OP

	* src/PatternLatout.cpp: workaround missing << operator for int64_t
	on MSVC.
	
	* src/TimeStamp.cpp: fix ref typo for timeb struct.

	* include/log4cpp/config-win32.h: #define LOG4CPP_USE_CLEANUP.

2001-11-30 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* tests/testbench.cpp: use TimeStamp instead of ::time()

	* include/log4cpp/Makefile.am: added config-openvms.h to headers.

	* include/log4cpp/Appender.hh, include/log4cpp/HierarchyMaintainer.hh,
	include/log4cpp/Log4cpCleanup.hh, src/Appender.cpp,
	src/HierarchyMaintainer.cpp, src/Log4cppCleanup.cpp: conditionally
	use Log4cppCleanup, depending on #define LOG4CPP_USE_CLEANUP. The new 